modified: docker-compose.yml, setup/settings.py

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,20 +12,20 @@ services:
     env_file:
       - ./.env
     depends_on:
-      # - db
+      - db
       - redis
 
-  # db:
-  #   image: postgres:16
-  #   container_name: cms_db
-  #   environment:
-  #     POSTGRES_DB: ${POSTGRES_DB}
-  #     POSTGRES_USER: ${POSTGRES_USER}
-  #     POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-  #   ports:
-  #     - "5432:5432"
-  #   volumes:
-  #     - postgres_data:/var/lib/postgresql/data
+  db:
+    image: postgres:16
+    container_name: cms_db
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
   redis:
     image: redis:8
     container_name: cms_redis
